tests/negative/semantic/imported_transitive_undefined_variable/input.ci
import "a.ci";
void main(string[] args) {}
